welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
while(vuBiscuit()==false){for (i <- 1 to 7){avance();
               ^Program:5: error: value droite is not a member of Unit
possible cause: maybe a semicolon is missing before `value droite'?
if(estSurBiscuit()){vuBiscuit = true;recule(4);}}droite();gauche();}
                                                 ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit()==false){for (i <- 1 to 7){avance();
^